--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "telegram-clicker-game",
   "version": "1.0.0",
   "description": "Clicker game for Telegram Mini App",
+  "homepage": "https://daddyunknown.github.io/",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
     "client": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -24,6 +27,7 @@
     "@mantine/hooks": "^7.3.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "gh-pages": "^6.1.1"
   }
 } 
